samples/_failures_safe/1761190128_ac62c2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_77af9516.c: In function ‘main’:
./samples/SAFE/__tmp_77af9516.c:145:24: error: expected ‘)’ at end of input
  145 |     if (!validate_input
      |        ~               ^
      |                        )
./samples/SAFE/__tmp_77af9516.c:145:5: error: expected declaration or statement at end of input
  145 |     if (!validate_input
      |     ^~
